# varnish-pkg

./: Makefile.am  Makefile.in  README.krux  aclocal.m4  config.h.in  configure  configure.ac
debian/: changelog  control  libvarnishapi-dev.install  libvmod-statsd.install  libvmod-throttle.install  libvmod-timers.install  rules  varnish.default  varnish.init  varnish.install  varnish.postrm  varnish.service  varnish.varnishlog.init  varnish.varnishncsa.default  varnish.varnishncsa.init  varnishlog.service  varnishncsa.service  watch
doc/: Makefile.in  changes.html
doc/sphinx/: Makefile.in  conf.py
doc/sphinx/=build/doctrees/: environment.pickle  index.doctree
doc/sphinx/=build/doctrees/faq/: configuration.doctree  general.doctree  http.doctree  index.doctree  logging.doctree
doc/sphinx/=build/doctrees/glossary/: index.doctree
doc/sphinx/=build/doctrees/installation/: bugs.doctree  help.doctree  index.doctree  install.doctree  prerequisites.doctree  upgrade.doctree
doc/sphinx/=build/doctrees/phk/: autocrap.doctree  backends.doctree  barriers.doctree  gzip.doctree  (+10 more)
doc/sphinx/=build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
etc/: Makefile.in
include/: Makefile.in  vcs_version.h  vmod_abi.h
lib/: Makefile.am  Makefile.in
lib/libjemalloc/: Makefile.in
lib/libvarnish/: Makefile.in
lib/libvarnishapi/: Makefile.in
lib/libvarnishcompat/: Makefile.in
lib/libvcl/: Makefile.in  vcc_fixed_token.c
lib/libvgz/: Makefile.in
lib/libvmod-statsd/src/: Makefile.am
lib/libvmod-timers/src/: Makefile.am
lib/libvmod_std/: Makefile.in  vmod_std.3
man/: Makefile.in  varnish-cli.7  varnish-counters.7  vcl.7
redhat/: Makefile.in
(+104 files in other folders)
